[package]
name = "nvd-rs" #改这个
version = "0.1.0"
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cpe", "cve", "cvss", "cwe", "nvd-db", "tools"]

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3


[dependencies]
cpe = { path = "cpe", optional = true }
cve = { path = "cve", optional = true }
cvss = { path = "cvss", optional = true }
cwe = { path = "cwe", optional = true }
nvd-db = { path = "nvd-db", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
serde_json = "1.0"
flate2 = "1.0"
zip = "0.6"
cve = { path = "cve"}