[workspace.package]
#name = "nvd-rs" #改这个
version = "0.1.0"
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]
license-file = "LICENSE"
license = "GPLv3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["nvd-api", "nvd-cpe", "nvd-cve", "nvd-cvss", "nvd-cwe"]
exclude = ["helper", "nvd-cpe/schema", "nvd-server", "nvd-yew"]
resolver = "2"

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
nvd-cve = { path = "nvd-cve" }
nvd-cpe = { path = "nvd-cpe" }
nvd-cvss = { path = "nvd-cvss" }
nvd-cwe = { path = "nvd-cwe" }