[package]
name = "cnvd"
edition = "2021"
description = "A rust implementation of the cnvd."
homepage = "https://github.com/emo-crab/scap-rs"
repository = "https://github.com/emo-crab/scap-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "native-tls"] }
derive_builder = "0.20.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
[dev-dependencies]
quick-xml = { version = "0.31.0", features = ["serde", "encoding_rs", "serialize"] }
serde_json = "1.0"