[package]
name = "cve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cpe = { path = "../cpe" }
cvss = { path = "../cvss" }
thiserror = "1.0"