[package]
name = "extensions"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
lol_html = "1.1.1"
web-sys = { version = "0.3.63", features = [
    "console",
    "Document",
    "Element",
    "Node",
    "Window",
    "HtmlDocument",
] }
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.41"