[package]
name = "helper"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysqlclient-sys = "0.2.5"
diesel = { version = "2.1.0", features = ["r2d2", "mysql", "chrono", "uuid", "serde_json"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1.3.3", features = ["v4"] }
nvd-server = { path = "../nvd-server" }
nvd-cpe = { path = "../nvd-cpe" }
nvd-cwe = { path = "../nvd-cwe" }
nvd-cves = { path = "../nvd-cves" }
nvd-cvss = { path = "../nvd-cvss" }
nvd-api = { path = "../nvd-api" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
flate2 = "1.0"
zip = "0.6"
cached = "0.46.1"
tokio = { version = "1.34.0", features = ["full"] }
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
serde_json = "1.0"
flate2 = "1.0"
zip = "0.6"
tokio = { version = "1.34.0", features = ["full"] }