[package]
name = "helper"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
mysqlclient-sys = "0.4.0"
diesel = { version = "2.1.0", features = ["r2d2", "mysql", "chrono", "uuid", "serde_json"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dotenvy = "0.15"
uuid = { version = "1.3.3", features = ["v4"] }
nvd-cwe = { version = "0.1.0" }
nvd-cves = { version = "0.1.1" }
nvd-cpe = { version = "0.1.0" }
nvd-cvss = { version = "0.1.0" }
nvd-api = { version = "0.1.0" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.35.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
flate2 = "1.0"
zip = "0.6"
cached = "0.51.3"
tokio = { version = "1.34.0", features = ["full"] }
similar = "2.4.0"
csv = "1.3.0"
octocrab = "0.38.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.2", features = ["json", "gzip", "native-tls", "socks"] }
nvd-model = { path = "../nvd-model", features = ["db"] }
cnvd = { path = "../cnvd", version = "0.0.0" }
attackerkb-api-rs = { version = "0.1.2" }
thiserror = "1.0.50"
regex = { version = "1.10.3", default-features = false, features = [
    "std",
    "unicode",
] }
once_cell = "1.18.0"
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.35.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
serde_json = "1.0"
flate2 = "1.0"
zip = "0.6"
tokio = { version = "1.34.0", features = ["full"] }

[[bin]]
name = "helper"
path = "src/main.rs"