[package]
name = "nvd-api"
edition = "2021"
description = "A rust implementation of the nvd-api."
homepage = "https://github.com/emo-crab/nvd-rs"
repository = "https://github.com/emo-crab/nvd-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3.3", features = ["v4"] }
nvd-cvss.workspace = true
nvd-cves.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }