[package]
name = "nvd-cvss"
edition = "2021"
description = "A rust implementation of the nvd-cvss."
homepage = "https://github.com/emo-crab/nvd-rs"
repository = "https://github.com/emo-crab/nvd-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"