[package]
name = "nvd-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["r2d2","mysql","chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "1.0"