[package]
edition = "2021"
description = "A rust implementation of the nvd-model."
homepage = "https://github.com/emo-crab/scap-rs"
repository = "https://github.com/emo-crab/scap-rs"
name = "nvd-model"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPLv3"
version = "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["r2d2", "mysql", "chrono", "uuid", "serde_json"], optional = true }
dotenvy = { version = "0.15", optional = true }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.6.1", features = ["v4", "serde", "v7"] }
serde_json = { version = "1", features = ["preserve_order"] }
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid", "openapi_extensions"], optional = true }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"], optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }
nvd-cves = { version = "0.1.1" }
[features]
openapi = ["utoipa", "utoipa-swagger-ui"]
db = ["diesel", "dotenvy"]