[package]
name = "nvd-server"
edition = "2021"
description = "A rust implementation of the nvd-server."
homepage = "https://github.com/emo-crab/nvd-rs"
repository = "https://github.com/emo-crab/nvd-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPLv3"
version = "0.0.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl","cookies"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
openssl-sys = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
actix-files = "0.6.2"
actix-cors = "0.7.0"
mysqlclient-sys = "0.2.5"
diesel = { version = "2.1.4", features = ["r2d2", "mysql", "chrono", "uuid", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6.1", features = ["v4", "serde", "v7"] }
env_logger = "0.10.0"
[[bin]]
name = "nvd-server"
path = "src/main.rs"