[package]
name = "nvd-server"
edition = "2021"
description = "A rust implementation of the nvd-server."
homepage = "https://github.com/emo-crab/scap-rs"
repository = "https://github.com/emo-crab/scap-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPLv3"
version = "0.0.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl", "cookies"] }
actix-session = { version = "0.10.0", features = ["cookie-session"] }
openssl = { version = "0.10", features = ["vendored"] }
actix-files = "0.6.2"
actix-cors = "0.7.0"
mysqlclient-sys = "0.4.0"
thiserror = "2.0"
env_logger = "0.11.1"
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid", "openapi_extensions"], optional = true }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"], optional = true }
nvd-model = { path = "../nvd-model", version = "0.0.0", features = ["db", "openapi"] }
[features]
openapi = ["utoipa", "utoipa-swagger-ui"]
[[bin]]
name = "nvd-server"
path = "src/main.rs"