[package]
name = "nvd-yew"
edition = "2021"
description = "A rust implementation of the nvd-yew."
homepage = "https://github.com/emo-crab/scap-rs"
repository = "https://github.com/emo-crab/scap-rs"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPLv3"
version = "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3.63", features = [
    "console",
    "Document",
    "Element",
    "Node",
    "Window",
    "Navigator",
    "HtmlSpanElement",
    "UrlSearchParams",
    "Url",
    "HtmlButtonElement", ] }
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
nvd-cves = { version = "0.1.1" }
nvd-cpe = { version = "0.1.0" }
nvd-cvss = { version = "0.1.0" }
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind", "clock"] }
js-sys = "0.3.65"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = "1"
thiserror = "2.0"
wasm-bindgen-futures = "0.4.37"
uuid = { version = "1.6.1", features = ["serde", "js", "v4"] }
nvd-model = { path = "../nvd-model", version = "0.0.0", default-features = false, features = ["yew"] }
serde_json = "1"
[[bin]]
name = "nvd-yew"
path = "src/main.rs"