[package]
name = "tools"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysqlclient-sys = "0.2.5"
diesel = { version = "2.1.0", features = ["r2d2", "mysql", "chrono", "uuid","serde_json"] }
dotenvy = "0.15"
uuid = { version = "1.3.3", features = ["v4"] }
nvd-db = { path = "../nvd-db" }
cpe = { path = "../cpe" }
cwe = { path = "../cwe" }
cve = { path = "../cve" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serde", "encoding_rs", "serialize"] }
serde_yaml = "0.9"
flate2 = "1.0"
zip = "0.6"
cached = "0.44.0"
[[bin]]
name = "cpe_to_db"
path = "src/bin/cpe_to_db.rs"